# kratos-clone

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  ROADMAP.md  TODO.md  app.py  downloader.py  entrypoint.sh  pyproject.toml  requirements.txt  wsgi.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: AUDIT.md  HANDOFF.md  PERSONALIZATION.md  PRE_DEPLOY_AUDIT_2026-05-10.md  PROMPT_v2.md  WORKFLOW.md
docs/superpowers/plans/: 2026-04-27-personalization-mvp.md
docs/superpowers/specs/: 2026-05-14-ui-u1-u5-elapsed-timer-and-captures-dropdown.md  2026-05-16-personalize-preview-modal-design.md  2026-05-16-ui-rebrand-orange-radial.md
kratos_clone/: __init__.py  __main__.py  _logging.py  capture.py  post.py
personalize/: __init__.py  __main__.py  cli.py  openai_client.py  patcher.py  pipeline.py  sanitize.py  slots.py
scripts/: __init__.py  generate_design_system_v1.py  generate_design_system_v2.py  inventory.py  post_process.py  probe.py  validate.py
templates/: index.html  personalize.html
tests/: conftest.py  test_capture_helpers.py  test_capture_response_handler.py  test_captures_endpoint.py  test_client_errors.py  test_download_smoke.py  test_generator_helpers.py  test_inventory.py  test_personalize_app.py  test_personalize_openai_client.py  test_personalize_patcher.py  test_personalize_pipeline.py  test_personalize_sanitize.py  test_personalize_slots.py  test_personalize_smoke.py  test_post.py  test_post_process.py  test_probe.py  test_request_id.py  test_template_a11y.py  test_validate.py
tests/fixtures/: sample_captured.html  sample_inventory.json
tests/integration/: test_personalize_live.py
