[project]
name = "10-website-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "flask-limiter>=4.0.0",
    "gunicorn>=22.0.0",                 # CVE-2024-1135 (HTTP request smuggling) fixed in 22.0.0
    "openai>=2.0",
    "pillow>=11",
    "playwright>=1.57.0",
    "psutil>=5.9.8",
    "python-dotenv>=1.0",
    "requests>=2.32.5",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Default + commonly-useful linters. Keep the set small enough that ruff stays
# fast; expand selectively if specific bug classes show up in review.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length — handled by formatter; long log strings sometimes intentional
    "B008",  # function call in arg defaults — common Flask pattern (limiter.limit(...))
]

[tool.ruff.lint.per-file-ignores]
# Tests can use longer lines and import-pattern shortcuts.
"tests/**/*.py" = ["E501"]
# Legacy single-script generators run side-effecting code at module level.
"scripts/generate_design_system_v*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
# Start permissive; tighten incrementally per module via the override blocks below.
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
# Allow untyped third-party libs without type stubs.
ignore_missing_imports = true
# Run only over our code, not site-packages or generated stuff.
files = ["personalize", "kratos_clone", "scripts", "app.py", "wsgi.py"]
exclude = ['build/', 'dist/', '\.venv/', 'tests/', 'extracted/', 'extracted_v2/']

# Strict on the new modules where typing was authored deliberately.
[[tool.mypy.overrides]]
module = ["personalize.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unreachable = true

# Permissive on legacy modules — gradual typing path. Tighten as we go.
[[tool.mypy.overrides]]
module = ["app", "wsgi", "downloader", "kratos_clone.*", "scripts.generate_design_system_v1", "scripts.generate_design_system_v2", "scripts.inventory"]
disallow_untyped_defs = false
check_untyped_defs = false
